<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg">

    <TextView
        android:id="@+id/timetxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="8:30 AM - 9:30 AM"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/timetxt"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal" />


    <LinearLayout
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/subnamewid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/subject"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/subwidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="English"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/third"
        android:layout_margin="7dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/teachnamewid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/teacher"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/teacherwidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="U Bar Nyar"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/forabsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fourth"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/youmiss"
        android:textColor="@color/red"
        android:textSize="13sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/absent"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/fourth"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/greenbgforpresent"
        android:padding="2dp"
        android:text="@string/absent"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/widdivider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/absent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/wholedaydivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/widdivider1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="left"
            android:padding="2dp"
            android:text="@string/wholedayabsent"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:id="@+id/isitwhole"/>

        <Button
            android:id="@+id/wholedayyesno"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:background="@drawable/greenbgforpresent"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widdivider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/wholedaydivider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/offdaydivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/widdivider2"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/isitoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="left"
            android:padding="2dp"
            android:text="@string/isifoff"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/offdayyesno"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:background="@drawable/greenbgforpresent"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>


</RelativeLayout>