<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/time_bg_green">

    <Button
        android:id="@+id/close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_close" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/close"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/time_bg_green"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"/>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <me.myatminsoe.mdetect.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/subject"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/subjectlongname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="English"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <me.myatminsoe.mdetect.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/teacher"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <me.myatminsoe.mdetect.MMTextView
            android:id="@+id/teachername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="U Bal Thu"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row2"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <me.myatminsoe.mdetect.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/timeinterval"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <me.myatminsoe.mdetect.MMTextView
            android:id="@+id/timeinterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="8:30 AM"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row3"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:weightSum="7"
        android:background="@drawable/time_bg_green"
        android:padding="10dp">

        <me.myatminsoe.mdetect.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/getnoti"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:id="@+id/notiString"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/getnoti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6" />
    </LinearLayout>

</RelativeLayout>