<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aunthtoo.timetableforcupyay.MonthlyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.applandeo.materialcalendarview.CalendarView
                android:id="@+id/monthlycalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                app:headerColor="@color/colorAccent"
                app:selectionColor="@color/colorAccent"
                app:todayLabelColor="@android:color/black"
                app:forwardButtonSrc="@drawable/ic_right"
                app:previousButtonSrc="@drawable/ic_left"/>

            <LinearLayout
                android:id="@+id/row1inmonthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/monthlycalendar"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:src="@drawable/ic_close" />

                <me.myatminsoe.mdetect.MMTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="2dp"
                    android:shadowColor="@color/shadowcolor"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/offdays"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2inmonthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row1inmonthly"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:src="@drawable/ic_present" />

                <me.myatminsoe.mdetect.MMTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="2dp"
                    android:shadowColor="@color/shadowcolor"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/presentdays"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3inmonthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row2inmonthly"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:src="@drawable/ic_absent" />

                <me.myatminsoe.mdetect.MMTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="2dp"
                    android:shadowColor="@color/shadowcolor"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/absentdays"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
